[package]
name = "procedural-map"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = "thin"


[dependencies]
bevy = "0.8.1"
bevy-inspector-egui = "0.12.1"
bevy_egui = "0.16.0"
bracket-pathfinding = "0.8.4"
iyes_loopless = "0.7.1"
rand = "0.8.5"

[build-dependencies]
wasm-bindgen = "0.2.83"
